--- a/index.html
+++ b/index.html
@@ -1,75 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Lexington Schools Map</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.control.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>#map {height: 90vh; width: 100vw;}</style><!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Lexington Schools Map</title>
-
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-
-  <!-- Leaflet TimeDimension CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.control.min.css" />
-
-  <style>
-    #map { width: 100vw; height: 90vh; }
-  </style>
-</head>
-<body>
-  <div id="map"></div>
-
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  
-  <!-- Leaflet TimeDimension JS -->
-  <script src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
-  
-  <!-- Your main JavaScript file for the map logic -->
-  <script src="js/script.js"></script>
-</body>
-</html>
-
-</head>
-<body><!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Lexington Schools Map</title>
-
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-
-  <!-- Leaflet TimeDimension CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.control.min.css" />
-
-  <style>
-    #map { width: 100vw; height: 90vh; }
-  </style>
-</head>
-<body>
-  <div id="map"></div>
-
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  
-  <!-- Leaflet TimeDimension JS -->
-  <script src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
-  
-  <!-- Your main JavaScript file for the map logic -->
-  <script src="js/script.js"></script>
-</body>
-</html>
-
-  <div id="map"></div>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
-  <script src="js/script.js"></script>
-</body>
-</html>
-
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<!-- TimeDimension if animating -->
+<script src="https://rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.min.js"></script>
