--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <!-- Leaflet TimeDimension CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.control.min.css" />
-  <style>
-    html, body { height: 100%; margin: 0; padding: 0; }
-    #map {
-      width: 100vw;
-      height: 90vh;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <!-- This is where your interactive map will appear -->
